<resources>
    <string name="app_name">WellBook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">WELLBOOK APP</string>
    <string name="nav_header_subtitle">damianofrancesco71@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Impostazioni</string>

    <string name="menu_home">Home</string>
    <string name="menu_Aggiungiutente">Aggiungi Utente</string>
    <string name="menu_AggiungiPrenotazione">Aggiungi prenotazione</string>
    <string name="menu_ViewUsers">Vedi Utenti</string>
    <string name="menu_ViewReservations">Vedi Prenotazioni</string>
    <string name="delete"> Elimina </string>
    <string name="edit"> Modifica </string>



</resources>